# tip5

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  ci.yml
lib/: CMakeLists.txt
lib/include/tip5xx/: b_field_element.hpp  b_field_element_error.hpp  ntt.hpp  ntt_error.hpp  tip5xx.hpp  tip5xx_error.hpp  traits.hpp  x_field_element.hpp  x_field_element_error.hpp
lib/src/: b_field_element.cpp  b_field_element_error.cpp  ntt.cpp  tip5xx.cpp  x_field_element.cpp
samples/: CMakeLists.txt
samples/src/: main.cpp
samples/tip5-cpp/: CMakeLists.txt
samples/tip5-rust/: Cargo.toml
samples/tip5-rust/src/: main.rs
tests/: CMakeLists.txt
tests/include/: random_generator.hpp
tests/src/: b_field_element_test.cpp  ntt_test.cpp  tip5xx_test.cpp  x_field_element_test.cpp
